=== WebKit-102 ===

2003-09-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken.

	- fixed 3417486 - after logging off from secure Etrade website, going back returns you to secure page

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _loadItem:withLoadType:]): Don't request stale data
	for https pages, as this could be a security risk.

2003-09-11  Richard Williamson   <rjw@apple.com>

	Fixed 3406671.  Added a private method for Mail to get selection
	rect.

        Reviewed by Darin Adler.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView updateTextBackgroundColor]):
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _handleMouseDragged:]):
        (-[WebHTMLView _pluginController]):
        (-[WebHTMLView _selectionRect]):

2003-09-10  Richard Williamson   <rjw@apple.com>

	Fixed 3231031.  Use the normal methodology for displaying each frame of a GIF.  That is,
	just call setNeedsDisplayInRect, rather than drawing directly.  Drawing directly violates
	layering/clipping.

        Reviewed by Dave Hyatt.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer nextFrame:]):

=== Safari-100 ===

2003-09-09  Richard Williamson   <rjw@apple.com>

	Fixed 3414988.  Don't store absolute path to home directory.
	Reviewed by Chris Blumenberg.

	Fixed 3414319.  Send correct WebView back as parameter to webViewShow:
	Review by Darin.

	Fixed 3095029.  Draw a frame's border in WebFrameView, instead of WebHTMLView, and correctly inset the frame's scrollview to account for the border.  Mostly written by Darin.
        Reviewed by Darin (and Richard).

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase _createFileDatabase]):
	Store @"~/Library/Icon" instead of absolute path, and always try to tilde expand stored path.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge setHasBorder:]):